[package]
name = "libbpf-rs"
version = "0.1.0"
authors = ["Daniel Xu <dxu@dxuuu.xyz>"]
edition = "2018"
license = "LGPL-2.1 OR BSD-2-Clause"

[dependencies]
thiserror = "1.0"
bitflags = "1.2"
nix = "0.17"
num_enum = "0.4"
#libbpf-sys = { version = "0.0.8-2" }
libbpf-sys = { git = "https://github.com/danobi/libbpf-sys.git", branch = "bpf_object_btf_load" }

[dev-dependencies]
libc = "0.2"
